--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to  vavuniya</h1>
+    <h1>Welcome to  ghlkjl.vavuniya</h1>
 	
 	
 </body>
